update to log4j2; minor other fixes